@@ -2,7 +2,7 @@ package ru.invest.api.tinkoff.supplier.usecase.impl;
 
 import lombok.RequiredArgsConstructor;
 import org.apache.commons.collections4.MapUtils;
-import org.apache.commons.lang3.StringUtils;
+import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.stereotype.Component;
 import ru.invest.api.common.exception.GeneralNotFoundEntityException;
 import ru.invest.api.common.exception.enums.ExceptionErrorCode;
@@ -10,6 +10,7 @@ import ru.invest.api.common.model.BondModel;
 import ru.invest.api.common.model.PriceModel;
 import ru.invest.api.tinkoff.supplier.mapper.BondMapper;
 import ru.invest.api.tinkoff.supplier.usecase.BondRetrieverUseCase;
+import ru.invest.api.tinkoff.supplier.usecase.CouponUseCase;
 import ru.invest.api.tinkoff.supplier.usecase.PriceUseCase;
 import ru.invest.api.tinkoff.supplier.usecase.TinkoffBondUseCase;
 import ru.tinkoff.piapi.contract.v1.Bond;
@@ -21,9 +22,12 @@ import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
+import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.ExecutorService;
 import java.util.function.BiFunction;
 import java.util.stream.Collectors;
 
+import static ru.invest.api.tinkoff.supplier.constants.Constants.COUPON_EXECUTOR_SERVICE;
 import static ru.invest.api.tinkoff.supplier.predicates.BondPredicates.FOREIGN_CURRENCY_PREDICATE;
 import static ru.invest.api.tinkoff.supplier.predicates.BondPredicates.ISIN_PREDICATE;
 
@@ -31,26 +35,46 @@ import static ru.invest.api.tinkoff.supplier.predicates.BondPredicates.ISIN_PRED
 @RequiredArgsConstructor
 public class TinkoffBondUseCaseImpl implements TinkoffBondUseCase {
     private final BondMapper bondMapper;
-
     private final PriceUseCase priceUseCase;
     private final BondRetrieverUseCase bondRetrieverUseCase;
+    private final CouponUseCase couponUseCase;
+    @Qualifier(COUPON_EXECUTOR_SERVICE)
+    private final ExecutorService couponExecutorService;
 
     @Override
     public List<BondModel> getForeignCurrencyBonds() {
         final Map<String, Bond> foreignBonds = filterForeignBonds(bondRetrieverUseCase.getAllBonds());
 
-        final List<String> uids = foreignBonds.entrySet()
+        if (MapUtils.isEmpty(foreignBonds)) {
+            return Collections.emptyList();
+        }
+
+        final List<String> uids = foreignBonds.values()
                 .stream()
-                .filter(Objects::nonNull)
-                .map(Map.Entry::getValue)
                 .filter(Objects::nonNull)
                 .map(Bond::getUid)
                 .toList();
 
         final Map<String, PriceModel> bondPrices = priceUseCase.getLastPrices(uids, foreignBonds, getNominalPrice());
-        return bondMapper.toModel(foreignBonds, bondPrices)
-                .stream()
-                .sorted(bondComparator()).toList();
+        final List<BondModel> bondModels = bondMapper.toModel(foreignBonds, bondPrices);
+
+        enrichWithCouponsAsync(bondModels, foreignBonds);
+
+        return bondModels.stream()
+                .sorted(bondComparator())
+                .toList();
+    }
+
+    private void enrichWithCouponsAsync(final List<BondModel> bondModels, final Map<String, Bond> bondsById) {
+        final List<CompletableFuture<Void>> futures = bondModels.stream()
+                .filter(Objects::nonNull)
+                .map(bondModel -> CompletableFuture.runAsync(() -> {
+                    final Bond bond = bondsById.get(bondModel.getUid());
+                    bondModel.setCoupon(couponUseCase.getCoupons(bondModel, bond));
+                }, couponExecutorService))
+                .toList();
+
+        CompletableFuture.allOf(futures.toArray(CompletableFuture[]::new)).join();
     }
 
     private Map<String, Bond> filterForeignBonds(final Map<String, Bond> allBonds) {
@@ -58,27 +82,24 @@ public class TinkoffBondUseCaseImpl implements TinkoffBondUseCase {
             return Collections.emptyMap();
         }
 
-        return allBonds
-                .entrySet()
+        return allBonds.entrySet()
                 .stream()
                 .filter(Objects::nonNull)
                 .filter(entry -> FOREIGN_CURRENCY_PREDICATE.test(entry.getValue()))
                 .filter(entry -> ISIN_PREDICATE.test(entry.getValue()))
-                .collect(Collectors.toMap(
-                        Map.Entry::getKey,
-                        Map.Entry::getValue
-                ));
+                .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue));
     }
 
     private static BiFunction<Map<String, Bond>, String, MoneyValue> getNominalPrice() {
         return (bonds, uid) -> {
-            if (StringUtils.isBlank(uid)) {
+            if (uid == null || uid.isBlank()) {
                 return null;
             }
 
             final Bond bond = Optional.ofNullable(bonds.get(uid))
-                    .orElseThrow(() -> new GeneralNotFoundEntityException(ExceptionErrorCode.NOT_FOUND
-                            , "Bond is not present while calculating current price"));
+                    .orElseThrow(() -> new GeneralNotFoundEntityException(
+                            ExceptionErrorCode.NOT_FOUND,
+                            "Bond is not present while calculating current price"));
 
             return bond.getNominal();
         };
@@ -86,23 +107,19 @@ public class TinkoffBondUseCaseImpl implements TinkoffBondUseCase {
 
     private static Comparator<BondModel> bondComparator() {
         return Comparator.comparingInt(TinkoffBondUseCaseImpl::getRiskPriority)
-                .thenComparing(bond -> {
-                    if (bond.getCoupon() == null) {
-                        return null;
-                    }
-                    return bond.getCoupon().getInterest();
-                }, Comparator.nullsLast(Comparator.reverseOrder()));
+                .thenComparing(
+                        bond -> bond.getCoupon() != null ? bond.getCoupon().getInterest() : null,
+                        Comparator.nullsLast(Comparator.reverseOrder())
+                );
     }
 
-    private static int getRiskPriority(BondModel bond) {
+    private static int getRiskPriority(final BondModel bond) {
         if (bond.getRiskLevel() == null) {
             return 2;
         }
-
         return switch (bond.getRiskLevel()) {
             case RISK_LEVEL_LOW, RISK_LEVEL_MODERATE -> 0;
             default -> 1;
         };
     }
-
 }
